# pokerbot

./: .gitignore  README.md  app.py  app_helper.py  croping_test.py  extractor.py  game_7_players.py  main.py  main2.py  preflop_suggestions.json  pyproject.toml  service.py  show_ranges.py  solver.py  test2.py  test_cases.json  test_game.py  testiiiiingscreenshot.py  testing.json  testing_results.txt
scripts/: scrap_preflop.py
