[tool.poetry]
name = "pokerbot"
version = "0.1.0"
description = ""
authors = ["Oleksandr Nazarevych <oleksandr.o.nazarevych@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
mss = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
